--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "2.3.4",
   "description": "Drawer navigator component for React Navigation",
   "main": "lib/commonjs/index.js",
-  "react-native": "lib/module/index.js",
+  "react-native": "src/index.tsx",
   "module": "lib/module/index.js",
   "types": "lib/typescript/src/index.d.ts",
   "files": [
     "src",
-    "lib"
+    "lib",
+    "!**/__tests__",
+    "!**/__fixtures__",
+    "!**/__mocks__"
   ],
   "scripts": {
     "test": "jest",
@@ -45,11 +48,10 @@
     "@babel/core": "^7.4.3",
     "@commitlint/config-conventional": "^7.5.0",
     "@expo/vector-icons": "^10.0.1",
-    "@react-native-community/bob": "^0.3.4",
     "@release-it/conventional-changelog": "^1.1.0",
     "@types/jest": "^24.0.11",
-    "@types/react": "^16.8.13",
-    "@types/react-native": "^0.57.49",
+    "@types/react": "^17.0.41",
+    "@types/react-native": "^0.67.3",
     "@types/react-test-renderer": "^16.8.1",
     "babel-jest": "^24.7.1",
     "commitlint": "^7.5.2",
@@ -64,16 +66,19 @@
     "react-dom": "16.8.3",
     "react-lifecycles-compat": "^3.0.4",
     "react-native": "~0.59.10",
+    "react-native-builder-bob": "^0.18.2",
     "react-native-gesture-handler": "^1.1.0",
-    "react-native-reanimated": "^1.2.0",
+    "react-native-reanimated": "^2.5.0",
     "react-native-screens": "^1.0.0-alpha.23",
     "react-native-testing-library": "^1.7.0",
     "react-navigation": "^4.0.7",
     "react-test-renderer": "16.8.6",
     "release-it": "^12.3.6",
-    "typescript": "^3.4.5"
+    "typescript": "^4.6.2"
   },
-  "dependencies": {},
+  "dependencies": {
+    "react-native-builder-bob": "^0.18.2"
+  },
   "peerDependencies": {
     "react": "*",
     "react-native": "*",
@@ -91,7 +96,8 @@
       "jest-setup.js"
     ],
     "modulePathIgnorePatterns": [
-      "<rootDir>/example/"
+      "<rootDir>/example/",
+      "<rootDir>/lib/"
     ],
     "transformIgnorePatterns": [
       "node_modules/(?!(jest-)?react-native|react-navigation|@react-navigation/core|@react-navigation/native)"
@@ -112,7 +118,7 @@
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
-  "@react-native-community/bob": {
+  "react-native-builder-bob": {
     "source": "src",
     "output": "lib",
     "targets": [
@@ -120,5 +126,9 @@
       "module",
       "typescript"
     ]
-  }
+  },
+  "eslintIgnore": [
+    "node_modules/",
+    "lib/"
+  ]
 }
